k8s/module12/homework/httpserver-istio.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpserver-istio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: httpserver-istio
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "80"
      labels:
        app: httpserver-istio
    spec:
      containers:
        - name: httpserver
          image: cncamp/httpserver:v1.0-metrics
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: httpserver-istio
spec:
  type: NodePort
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: httpserver-istio
