k8s/module12/homework/istio.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: httpsserver-istio
spec:
  gateways:
    - httpsserver-istio
  hosts:
    - httpsserver-istio.cncamp.io
  http:
    - match:
        - port: 443
      route:
        - destination:
            host: httpserver-istio.module12.svc.cluster.local
            port:
              number: 80

---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: httpsserver-istio
spec:
  selector:
    istio: ingressgateway
  servers:
    - hosts:
        - httpsserver-istio.cncamp.io
      port:
        name: https-default
        number: 443
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: cncamp-credential
